# DRF_proj

./: .env.sample  README.md  dump.rdb  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: cc.py  lc.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_subscription_is_subscribed.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: cp.py  csu.py  cu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payments.py  0004_alter_payments_data.py  0004_alter_payments_user.py  0005_alter_payments_data.py  0005_alter_payments_user.py  0006_alter_payments_user.py  0006_payments_payment_id_payments_payment_link_and_more.py  0007_payments_status.py
